# Sonar

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  POINTS_SYSTEM_DEPLOYMENT.md  README.md  package.json  railway.json  test-walrus-upload.sh  tsconfig.base.json  vercel.json
audio-verifier/: .env.example  AGENTS.md  BUILD  Dockerfile  LEADERBOARD_SYSTEM.md  README.md  SDK_MIGRATION_SUMMARY.md  achievements_tracker.py  airdrop_calculator.py  audio_checker.py  batch_historical_analyzer.py  build.sh  bulk_detector.py  debug_blob.py  default.nix  delete_datasets.py  env.example  export_verifications.py  feedback_clustering.py  feedback_indexer.py  fingerprint.py  flake.nix  gemini_rarity_analyzer.py  leaderboard_service.py  main.py  ml_export.py  models.py  pinecone_backfill.py  points_calculator.py  pyproject.toml  qdrant_backfill.py  railway.json  saturation_calculator.py  seal-cli-file-input.patch  seal_decryptor.py  semantic_indexer.py  session_store.py  start.sh  subject_extractor.py  subject_rarity_researcher.py  (+4 more)
audio-verifier/.hypothesis/constants/: 032678cdf951b9db  2225d3b18c33faeb  26947b7e19d513d7  418ae7f163e9edde  5698a330edd783b8  60a6a5fa4552ecd8  c81f748712f0a45c  e38be87e20a8009e  f845bf9edc42cec3
audio-verifier/.hypothesis/examples/04e6b3400353b141/: 3405ee659f1dee9f  374c61267d16ac5c  44f08e7a61db4f64  488e5f0376de8a83  5917e1d008023a1b  6fc39e3bc721be0c  765da3d4d1721550  7ca3fad289bab868  99b90d4ed4d6bb41  c3db9b1e214cec0a  d000445d6c5e5362  dcb8648e32101c47  ded42d514a41604c  f709b63454117a32
audio-verifier/.hypothesis/examples/3405ee659f1dee9f/: d0daf288a1ad9ebf
audio-verifier/.hypothesis/examples/374c61267d16ac5c/: 13bb4adc94ea1f54
audio-verifier/.hypothesis/examples/44f08e7a61db4f64/: 18f6b5327ab312d8
audio-verifier/.hypothesis/examples/5917e1d008023a1b/: 8997cb3923e3ccfe
audio-verifier/.hypothesis/examples/765da3d4d1721550/: 2effdc7261cf9fd6
audio-verifier/.hypothesis/examples/7ca3fad289bab868/: ff57466cc63adb74
audio-verifier/.hypothesis/examples/99b90d4ed4d6bb41/: 05875bece9d9ff29  09d5e61538ab001c  29d42e9aeb3eabfd  2ceda87a5d481cbd  3322fe59e3246470  33c222b50e959d36  3dfe84704001c67b  45a476793aabd610  4e6217901ebccc52  5144a4e4db1ec31c  560009dc72123c24  5b509fa26ecaa1b1  65a50573be51f037  664606a659cb962c  6be96adc7fdd922a  7060031dea6d7386  73bd0872afdb60f7  76b88a48c2d37116  a34da9822027b617  b0ebf03c020b93e1  b1568d1803af82d5  b2473c25b949e112  b380595c37d26b9d  d960993f0ffa9cac  de58a60a818f12f3  e2281befb8215efe  e5c33700b2643613  e8357aea0106ad42  e9c2a28d0d438e8f  ed5b3d5bc82878c9  eeadd29a3c5d9f2f  f3d507680cccad6e  f3ff1e175b6680e6  f6e75037b78d82c1  fe77b030ff9db5e6
audio-verifier/.hypothesis/examples/dcb8648e32101c47/: 658664552555e94e
audio-verifier/.hypothesis/examples/ded42d514a41604c/: 0f51fe3938d3112d  101858875b86f1bd  1020a3f7030317ff  17ffb075fc3b072c  1d25f5168a024dfe  1e5d2d7f966c8a96  20be237c3e103be5  214369050d91d0af  218e91f26b6f15b3  2a69018d03737ef0  2c484a47c10e04b6  2da7d276c5effce7  2dc045c3db0f597a  32c26e2f72fdc4ee  33667eee7cc57af1  33cd89084e43e42d  3786cdf04bd6513c  382a48e943147fe4  3a6bb4eca8141ece  3ed25da74b9e2d2b  4053bee26b0a9d95  4b8245a513505329  4dcf6c5ad0991e51  4f715c70a72c2bdb  5050c1ad74424045  56fbce9c6f79e313  5827df0dffcfbad8  5a1a388fc94fcef1  5ae07919e3a2e800  6e8539be81e9d0e0  74bd4af3882c1d51  7a354c6cc20572b3  80b2b532d0761291  (+40 more)
audio-verifier/migrations/: 000_initial_schema.sql  001_add_user_tracking.sql  002_add_embedding_support.sql  003_upgrade_qdrant_support.sql  004_add_warnings_column.sql  005_add_verification_feedback.sql  006_add_feedback_embeddings.sql  migrate.py
audio-verifier/scripts/: verify-deployment.sh
audio-verifier/seal-decryptor-ts/: .eslintrc.json  README.md  debug_exports.ts  decrypt.test.ts  decrypt.ts  package.json  server.ts  tsconfig.json  types.ts
audio-verifier/tests/: conftest.py  test_audio_checker.py  test_fingerprint.py  test_points_integration.py
audio-verifier/tests/integration/: __init__.py  conftest.py  fake_session_store.py  test_audio_warnings.py  test_early_validation.py  test_lifecycle.py  test_seal_service.py  test_verify_e2e.py
audio-verifier/tests/property/: test_audio_properties.py  test_pipeline_invariants.py  test_verify_properties.py
audio-verifier/tests/unit/: test_audio_checker.py  test_format_detection.py  test_main_middleware.py  test_seal_decryptor.py  test_session_store.py
audio-verifier/vector_db/: __init__.py  audio_feature_extractor.py  multimodal_search.py  pinecone_client.py  qdrant_client.py  vector_service.py
railway-audio-checker/: .gitignore  Dockerfile  README.md  audio_checker.py  fingerprint.py  main.py  pyproject.toml
walrus-publisher/: .coverage  .dockerignore  AGENTS.md  Dockerfile  README.md  app.yaml  fly.toml  mypy.ini  pyproject.toml  pytest.ini  railway.toml  requirements-test.txt  run_tests.sh  test_runner.py
walrus-publisher/.hypothesis/constants/: 212e9c48d45655e2  3dca5d81999a7954  3e680596be427e90  488f42e62e5fed59  4c0e29eecadddd17  56afb103980675b4  ee9fe24fa680bae7  f2d12674d8b1b1c5
walrus-publisher/config/: __init__.py  platform.py
walrus-publisher/src/: __init__.py  chunking.py  main.py  models.py  orchestrator.py  transaction_builder.py  uploader.py  wallet_manager.py
walrus-publisher/tests/: conftest.py
walrus-publisher/tests/e2e/: test_upload_flow.py
walrus-publisher/tests/integration/: test_orchestrator.py
walrus-publisher/tests/unit/: test_chunking.py  test_transaction_builder.py  test_uploader.py  test_wallet_manager.py  test_wallet_manager_property.py
(+387 files in other folders)
