[project]
name = "sonar-audio-verifier"
version = "2.0.0"
description = "Comprehensive audio verification: quality, copyright, transcription, and AI analysis"
requires-python = ">=3.13"
dependencies = [
    # FastAPI server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",

    # Audio processing
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",

    # Copyright detection
    "pyacoustid>=1.3.0",

    # HTTP client (Vercel KV REST API)
    "httpx>=0.25.0",

    # AI transcription & analysis
    "google-generativeai>=0.3.0",

    # Sui blockchain integration
    "pysui>=0.93.0",

    # Cryptography for AES decryption
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx-mock>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["*.py"]
