[project]
name = "sonar-audio-verifier"
version = "2.0.0"
description = "Comprehensive audio verification: quality, copyright, transcription, and AI analysis"
requires-python = ">=3.10,<3.14"
dependencies = [
    # FastAPI server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",

    # Audio processing
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",

    # Copyright detection
    "pyacoustid>=1.3.0",

    # HTTP client
    "httpx>=0.25.0",

    # AI transcription & analysis (via OpenRouter)
    "openai>=1.0.0",

    # PostgreSQL database (for session storage)
    "asyncpg>=0.29.0",

    # Cryptography for AES decryption
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.80.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["*.py"]

[tool.pyright]
include = ["*.py", "vector_db", "tests", "migrations"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "standard"
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = true
reportOptionalMemberAccess = true
reportOptionalOperand = true
reportOptionalSubscript = true
reportUnboundVariable = true

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (with dependencies)",
    "e2e: End-to-end tests (full flow, slow)",
    "property: Property-based tests (Hypothesis)",
]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers -v"

[tool.pyrefly]
include = ["audio_verifier/**/*.py", "main.py", "*.py"]
exclude = ["tests/**", "venv/**", "__pycache__", ".venv"]
